smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-namespace.smithy
// Parse error at line 4, column 1 near `deprecated`: Traits cannot be applied to `namespace`
namespace com.foo

@deprecated
namespace com.bar
